Compiladores/exemploSem_fun/y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList ListaFuncoes

   3  ListaFuncoes : ListaFuncoes umaFuncao
   4               | umaFuncao

   5  $$2 :

   6  umaFuncao : FUNCT tipoOuVoid IDENT $$2 '(' ParamFormais ')' dList bloco

   7  ParamFormais : ListaParametros
   8               |

   9  tipoOuVoid : VOID
  10             | type

  11  ListaParametros : ListaParametros ',' newIdentListaParametros
  12                  | newIdentListaParametros

  13  newIdentListaParametros : type IDENT

  14  dList : dList decl
  15        |

  16  $$3 :

  17  decl : type $$3 LId ';'

  18  LId : LId ',' nomeId
  19      | nomeId

  20  nomeId : IDENT

  21  type : INT
  22       | DOUBLE
  23       | BOOL

  24  bloco : '{' listacmd '}'

  25  listacmd : listacmd cmd
  26           |

  27  cmd : exp ';'
  28      | IF '(' exp ')' cmd
  29      | RETURN exp ';'

  30  exp : exp '+' exp
  31      | exp '>' exp
  32      | exp AND exp
  33      | NUM
  34      | '(' exp ')'
  35      | lvalue
  36      | lvalue '=' exp

  37  $$4 :

  38  exp : IDENT $$4 '(' ParamReais ')'

  39  lvalue : IDENT
  40         | IDENT '[' exp ']'
  41         | IDENT '.' exp

  42  ParamReais : ListaExpr
  43             |

  44  ListaExpr : ListaExpr ',' exp
  45            | exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList ListaFuncoes  (2)
	dList : .  (15)

	.  reduce 15

	dList  goto 3


state 3
	prog : $$1 dList . ListaFuncoes  (2)
	dList : dList . decl  (14)

	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	FUNCT  shift 7
	.  error

	type  goto 8
	ListaFuncoes  goto 9
	umaFuncao  goto 10
	decl  goto 11


state 4
	type : INT .  (21)

	.  reduce 21


state 5
	type : DOUBLE .  (22)

	.  reduce 22


state 6
	type : BOOL .  (23)

	.  reduce 23


state 7
	umaFuncao : FUNCT . tipoOuVoid IDENT $$2 '(' ParamFormais ')' dList bloco  (6)

	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	VOID  shift 12
	.  error

	type  goto 13
	tipoOuVoid  goto 14


state 8
	decl : type . $$3 LId ';'  (17)
	$$3 : .  (16)

	.  reduce 16

	$$3  goto 15


state 9
	prog : $$1 dList ListaFuncoes .  (2)
	ListaFuncoes : ListaFuncoes . umaFuncao  (3)

	FUNCT  shift 7
	$end  reduce 2

	umaFuncao  goto 16


state 10
	ListaFuncoes : umaFuncao .  (4)

	.  reduce 4


state 11
	dList : dList decl .  (14)

	.  reduce 14


state 12
	tipoOuVoid : VOID .  (9)

	.  reduce 9


state 13
	tipoOuVoid : type .  (10)

	.  reduce 10


state 14
	umaFuncao : FUNCT tipoOuVoid . IDENT $$2 '(' ParamFormais ')' dList bloco  (6)

	IDENT  shift 17
	.  error


state 15
	decl : type $$3 . LId ';'  (17)

	IDENT  shift 18
	.  error

	LId  goto 19
	nomeId  goto 20


state 16
	ListaFuncoes : ListaFuncoes umaFuncao .  (3)

	.  reduce 3


state 17
	umaFuncao : FUNCT tipoOuVoid IDENT . $$2 '(' ParamFormais ')' dList bloco  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 21


state 18
	nomeId : IDENT .  (20)

	.  reduce 20


state 19
	decl : type $$3 LId . ';'  (17)
	LId : LId . ',' nomeId  (18)

	','  shift 22
	';'  shift 23
	.  error


state 20
	LId : nomeId .  (19)

	.  reduce 19


state 21
	umaFuncao : FUNCT tipoOuVoid IDENT $$2 . '(' ParamFormais ')' dList bloco  (6)

	'('  shift 24
	.  error


state 22
	LId : LId ',' . nomeId  (18)

	IDENT  shift 18
	.  error

	nomeId  goto 25


state 23
	decl : type $$3 LId ';' .  (17)

	.  reduce 17


state 24
	umaFuncao : FUNCT tipoOuVoid IDENT $$2 '(' . ParamFormais ')' dList bloco  (6)
	ParamFormais : .  (8)

	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	')'  reduce 8

	type  goto 26
	ParamFormais  goto 27
	ListaParametros  goto 28
	newIdentListaParametros  goto 29


state 25
	LId : LId ',' nomeId .  (18)

	.  reduce 18


state 26
	newIdentListaParametros : type . IDENT  (13)

	IDENT  shift 30
	.  error


state 27
	umaFuncao : FUNCT tipoOuVoid IDENT $$2 '(' ParamFormais . ')' dList bloco  (6)

	')'  shift 31
	.  error


state 28
	ParamFormais : ListaParametros .  (7)
	ListaParametros : ListaParametros . ',' newIdentListaParametros  (11)

	','  shift 32
	')'  reduce 7


state 29
	ListaParametros : newIdentListaParametros .  (12)

	.  reduce 12


state 30
	newIdentListaParametros : type IDENT .  (13)

	.  reduce 13


state 31
	umaFuncao : FUNCT tipoOuVoid IDENT $$2 '(' ParamFormais ')' . dList bloco  (6)
	dList : .  (15)

	.  reduce 15

	dList  goto 33


state 32
	ListaParametros : ListaParametros ',' . newIdentListaParametros  (11)

	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	.  error

	type  goto 26
	newIdentListaParametros  goto 34


state 33
	umaFuncao : FUNCT tipoOuVoid IDENT $$2 '(' ParamFormais ')' dList . bloco  (6)
	dList : dList . decl  (14)

	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	'{'  shift 35
	.  error

	type  goto 8
	bloco  goto 36
	decl  goto 11


state 34
	ListaParametros : ListaParametros ',' newIdentListaParametros .  (11)

	.  reduce 11


state 35
	bloco : '{' . listacmd '}'  (24)
	listacmd : .  (26)

	.  reduce 26

	listacmd  goto 37


state 36
	umaFuncao : FUNCT tipoOuVoid IDENT $$2 '(' ParamFormais ')' dList bloco .  (6)

	.  reduce 6


state 37
	bloco : '{' listacmd . '}'  (24)
	listacmd : listacmd . cmd  (25)

	IDENT  shift 38
	NUM  shift 39
	IF  shift 40
	RETURN  shift 41
	'('  shift 42
	'}'  shift 43
	.  error

	exp  goto 44
	lvalue  goto 45
	cmd  goto 46


state 38
	exp : IDENT . $$4 '(' ParamReais ')'  (38)
	lvalue : IDENT .  (39)
	lvalue : IDENT . '[' exp ']'  (40)
	lvalue : IDENT . '.' exp  (41)
	$$4 : .  (37)

	'['  shift 47
	'.'  shift 48
	AND  reduce 39
	'='  reduce 39
	'>'  reduce 39
	'+'  reduce 39
	'('  reduce 37
	')'  reduce 39
	','  reduce 39
	';'  reduce 39
	']'  reduce 39

	$$4  goto 49


state 39
	exp : NUM .  (33)

	.  reduce 33


state 40
	cmd : IF . '(' exp ')' cmd  (28)

	'('  shift 50
	.  error


state 41
	cmd : RETURN . exp ';'  (29)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 51
	lvalue  goto 45


state 42
	exp : '(' . exp ')'  (34)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 52
	lvalue  goto 45


state 43
	bloco : '{' listacmd '}' .  (24)

	.  reduce 24


state 44
	cmd : exp . ';'  (27)
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	';'  shift 56
	.  error


45: shift/reduce conflict (shift 57, reduce 35) on '='
state 45
	exp : lvalue .  (35)
	exp : lvalue . '=' exp  (36)

	'='  shift 57
	AND  reduce 35
	'>'  reduce 35
	'+'  reduce 35
	')'  reduce 35
	','  reduce 35
	';'  reduce 35
	']'  reduce 35


state 46
	listacmd : listacmd cmd .  (25)

	.  reduce 25


state 47
	lvalue : IDENT '[' . exp ']'  (40)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 58
	lvalue  goto 45


state 48
	lvalue : IDENT '.' . exp  (41)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 59
	lvalue  goto 45


state 49
	exp : IDENT $$4 . '(' ParamReais ')'  (38)

	'('  shift 60
	.  error


state 50
	cmd : IF '(' . exp ')' cmd  (28)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 61
	lvalue  goto 45


state 51
	cmd : RETURN exp . ';'  (29)
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	';'  shift 62
	.  error


state 52
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	exp : '(' exp . ')'  (34)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	')'  shift 63
	.  error


state 53
	exp : exp AND . exp  (32)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 64
	lvalue  goto 45


state 54
	exp : exp '>' . exp  (31)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 65
	lvalue  goto 45


state 55
	exp : exp '+' . exp  (30)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 66
	lvalue  goto 45


state 56
	cmd : exp ';' .  (27)

	.  reduce 27


state 57
	exp : lvalue '=' . exp  (36)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 67
	lvalue  goto 45


state 58
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	lvalue : IDENT '[' exp . ']'  (40)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	']'  shift 68
	.  error


state 59
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	lvalue : IDENT '.' exp .  (41)

	.  reduce 41


state 60
	exp : IDENT $$4 '(' . ParamReais ')'  (38)
	ParamReais : .  (43)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	')'  reduce 43

	exp  goto 69
	lvalue  goto 45
	ParamReais  goto 70
	ListaExpr  goto 71


state 61
	cmd : IF '(' exp . ')' cmd  (28)
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	')'  shift 72
	.  error


state 62
	cmd : RETURN exp ';' .  (29)

	.  reduce 29


state 63
	exp : '(' exp ')' .  (34)

	.  reduce 34


state 64
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	exp : exp AND exp .  (32)

	.  reduce 32


state 65
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp '>' exp .  (31)
	exp : exp . AND exp  (32)

	AND  shift 53
	'+'  shift 55
	'='  reduce 31
	')'  reduce 31
	','  reduce 31
	';'  reduce 31
	']'  reduce 31


state 66
	exp : exp . '+' exp  (30)
	exp : exp '+' exp .  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)

	AND  shift 53
	'='  reduce 30
	'>'  reduce 30
	'+'  reduce 30
	')'  reduce 30
	','  reduce 30
	';'  reduce 30
	']'  reduce 30


state 67
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	exp : lvalue '=' exp .  (36)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	'='  reduce 36
	')'  reduce 36
	','  reduce 36
	';'  reduce 36
	']'  reduce 36


state 68
	lvalue : IDENT '[' exp ']' .  (40)

	.  reduce 40


state 69
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	ListaExpr : exp .  (45)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	')'  reduce 45
	','  reduce 45


state 70
	exp : IDENT $$4 '(' ParamReais . ')'  (38)

	')'  shift 73
	.  error


state 71
	ParamReais : ListaExpr .  (42)
	ListaExpr : ListaExpr . ',' exp  (44)

	','  shift 74
	')'  reduce 42


state 72
	cmd : IF '(' exp ')' . cmd  (28)

	IDENT  shift 38
	NUM  shift 39
	IF  shift 40
	RETURN  shift 41
	'('  shift 42
	.  error

	exp  goto 44
	lvalue  goto 45
	cmd  goto 75


state 73
	exp : IDENT $$4 '(' ParamReais ')' .  (38)

	.  reduce 38


state 74
	ListaExpr : ListaExpr ',' . exp  (44)

	IDENT  shift 38
	NUM  shift 39
	'('  shift 42
	.  error

	exp  goto 76
	lvalue  goto 45


state 75
	cmd : IF '(' exp ')' cmd .  (28)

	.  reduce 28


state 76
	exp : exp . '+' exp  (30)
	exp : exp . '>' exp  (31)
	exp : exp . AND exp  (32)
	ListaExpr : ListaExpr ',' exp .  (44)

	AND  shift 53
	'>'  shift 54
	'+'  shift 55
	')'  reduce 44
	','  reduce 44


State 45 contains 1 shift/reduce conflict.


27 terminals, 24 nonterminals
46 grammar rules, 77 states
